--- a/app/airport.glade
+++ b/app/airport.glade
@@ -86,6 +86,7 @@
       <object class="GtkStack" id="stack">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="transition_type">slide-right</property>
         <child>
           <object class="GtkGrid" id="list">
             <property name="visible">True</property>
